# bsaver

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  build.rs
.cargo/: config.toml
.github/: copilot-instructions.md  rust.instructions.md
.github/workflows/: ci.yml  release.yml
font/: OFL.txt
packaging/: AppxManifest.xml  build-msix.ps1
src/: bangla_date.rs  clock.rs  config.rs  launcher.rs  main.rs  renderer.rs  screensaver.rs  settings.rs
