[package]
name = "bsaver"
version = "1.1.0"
edition = "2024"
description = "A beautiful Bangla digital clock screensaver for Windows"
authors = ["Abu Sayed <hello@sayed.app>"]
license = "MIT"
repository = "https://github.com/abusayed0206/bsaver"
keywords = ["screensaver", "clock", "bangla", "windows"]
categories = ["gui"]

[dependencies]
# Font rendering with proper text shaping for Bangla
cosmic-text = "0.18.2"

# Time handling
chrono = "0.4"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"

# Windows-specific (using windows-rs)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "bsaver"
path = "src/main.rs"

[[bin]]
name = "BanglaSaver"
path = "src/launcher.rs"
